<resources>
    <string name="app_name">记账</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_input_endpoint_address">请输入后端地址</string>
    <string name="ok">确定</string>
    <string name="title_activity_main">主页</string>
    <string name="title_list">明细</string>

    <string name="title_settings">设置</string>
    <string name="please_select">请选择</string>

    <string name="demo_date">2021/03/05</string>


    <string name="title_subjects">科目</string>
    <string name="title_source_account">源账户</string>
    <string name="title_dest_account">目标账户</string>
    <string name="title_amount">金额</string>
    <string name="title_date">日期</string>
    <string name="title_remark">备注</string>
    <string name="offline_mode_tips">离线模式</string>
    <string name="online_mode_tips">在线模式</string>

    <string name="online">在线模式</string>
    <string name="offline">离线模式</string>
    <string name="offline_data_title">发现离线数据</string>
    <string name="offline_data_tips">发现%d条离线数据，是否同步至服务器?</string>
    <string name="cancel">取消</string>
    <string name="click_select_subject">点击选择科目</string>
    <string name="click_select_source_account">点击选择</string>
    <string name="click_select_dest_account">点击选择</string>
    <string name="click_input_amount">点击输入金额</string>
    <string name="click_input_remark">点击输入备注</string>
    <string name="button_copy">复制</string>
    <string name="button_edit">编辑</string>
    <string name="button_delete">删除</string>
    <string name="button_create">记一笔</string>


    <string name="tools_account">@微信余额</string>
    <string name="tools_user">@alice</string>
    <string name="detail_remark">什么都没写哦</string>
    <string name="titleCreate">新建明细</string>
    <string name="titleEdit">编辑明细</string>
    <string name="delete_tips">删除后不可恢复，是否删除</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thur">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>

    <string name="save">保存</string>

</resources>
