<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:centerTextColor="@color/secondary_text"
        app:centerType="textView"
        app:fillStatusBar="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftTextColor="@color/text_remark"
        app:leftType="textView"
        app:rightText="@string/button_create"
        app:rightTextColor="@color/secondary_text"
        app:rightType="textView"
        app:statusBarColor="@android:color/white"
        app:titleBarColor="@android:color/white"
        tools:layout_height="24dp" />

    <LinearLayout
        android:id="@+id/week_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <TextView
            android:id="@+id/d1"
            style="@style/WeekDay"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/d2"
            style="@style/WeekDay"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/d3"
            style="@style/WeekDay"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/d4"
            style="@style/WeekDay"
            android:text="@string/thur" />

        <TextView
            android:id="@+id/d5"
            style="@style/WeekDay"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/d6"
            style="@style/WeekDay"
            android:text="@string/sat" />

        <TextView
            android:id="@+id/d7"
            style="@style/WeekDay"
            android:text="@string/sun" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week_days"
        tools:listitem="@layout/item_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>