<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fillStatusBar="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftTextColor="@color/text_remark"
        app:leftType="textView"
        app:rightText="@string/save"
        app:rightTextColor="@color/text_remark"
        app:rightType="textView"
        app:statusBarColor="@android:color/white"
        app:titleBarColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/create_detail_subject_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_subjects"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/label" />

        <TextView
            android:id="@+id/create_detail_subject_input"
            style="@style/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/click_select_subject" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_detail_source_account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_source_account"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/label" />

                <TextView
                    android:id="@+id/create_detail_source_account_input"
                    style="@style/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/click_select_source_account" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_detail_dest_account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_dest_account"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/label" />

                <TextView
                    android:id="@+id/create_detail_dest_account_input"
                    style="@style/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/click_select_dest_account" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/create_detail_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_amount"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/label" />

        <EditText
            android:id="@+id/create_detail_amount_input"
            style="@style/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/click_input_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/create_detail_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_date"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/label" />

        <TextView
            android:id="@+id/create_detail_date_input"
            style="@style/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2021/03/05" />

        <TextView
            android:id="@+id/create_detail_remark_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_remark"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/label" />

        <EditText
            android:id="@+id/create_detail_remark_input"
            style="@style/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/click_input_remark"
            android:inputType="textMultiLine" />

    </LinearLayout>

</RelativeLayout>